--- a/Clean-Reader/Theme/Light.xaml
+++ b/Clean-Reader/Theme/Light.xaml
@@ -10,7 +10,7 @@
     <SolidColorBrush x:Key="PageBackground" Color="White"/>
     <SolidColorBrush x:Key="PageOverBackground" Color="#DEE5EB"/>
     <SolidColorBrush x:Key="CardBackground" Color="#F9F9F9"/>
-    <SolidColorBrush x:Key="CardBackgroundOver" Color="#DAE1E8"/>
+    <SolidColorBrush x:Key="CardBackgroundOver" Color="#E6EDF5"/>
     <SolidColorBrush x:Key="PointerOverMaskBackground" Color="Gray" Opacity="0.2"/>
     <SolidColorBrush x:Key="TransparentBackground" Color="White" Opacity="0.01"/>
 
@@ -43,4 +43,6 @@
     <SolidColorBrush x:Key="ErrorColor" Color="#F63340"/>
     <SolidColorBrush x:Key="ErrorColorOpacity" Color="#F63340" Opacity="0.2"/>
     <SolidColorBrush x:Key="ErrorColorOver" Color="#E32528"/>
+
+    <SolidColorBrush x:Key="ExpandColor" Color="#F0F0F8"/>
 </ResourceDictionary>
