--- a/Clean-Reader/Controls/Components/NavigateMenu.xaml
+++ b/Clean-Reader/Controls/Components/NavigateMenu.xaml
@@ -4,11 +4,47 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Clean_Reader.Controls.Components"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:uwp="using:Richasy.Font.UWP"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:uwp="using:Richasy.Font.UWP" xmlns:ui="using:Clean_Reader.Models.UI"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
+    <UserControl.Resources>
+        <DataTemplate x:DataType="ui:EntryItem" x:Key="ShelfItemTemplate">
+            <ListViewItem x:Name="Container" IsSelected="{x:Bind IsSelected,Mode=TwoWay}">
+                <Grid Padding="20,15">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE1F5;" FontSize="{CustomResource SmallFontSize}"
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+                    <TextBlock Grid.Column="1" HorizontalAlignment="Left" TextTrimming="CharacterEllipsis"
+                               ToolTipService.ToolTip="{x:Bind Name,Mode=OneWay}" Text="{x:Bind Name,Mode=OneWay}"
+                               VerticalAlignment="Center" FontFamily="{CustomResource Basic}" FontSize="{CustomResource BasicFontSize}"
+                               Margin="20,0,0,0"/>
+                    <TextBlock Text="{x:Bind Count,Mode=OneWay}" Style="{StaticResource SmallTextStyle}"
+                               Grid.Column="2" VerticalAlignment="Center" Margin="10,0,5,0"/>
+                </Grid>
+            </ListViewItem>
+        </DataTemplate>
+        <DataTemplate x:DataType="ui:EntryItem" x:Key="DefaultItemTemplate">
+            <ListViewItem x:Name="Container" IsSelected="{x:Bind IsSelected,Mode=TwoWay}">
+                <Grid Padding="20,15">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE1F5;" FontSize="{CustomResource SmallFontSize}"
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+                    <TextBlock Grid.Column="1" HorizontalAlignment="Left" TextTrimming="CharacterEllipsis"
+                               ToolTipService.ToolTip="{x:Bind Name,Mode=OneWay}" Text="{x:Bind Name,Mode=OneWay}"
+                               VerticalAlignment="Center" FontFamily="{CustomResource Basic}" FontSize="{CustomResource BasicFontSize}"
+                               Margin="20,0,0,0"/>
+                </Grid>
+            </ListViewItem>
+        </DataTemplate>
+    </UserControl.Resources>
     <Border x:Name="RootBorder">
         <Grid x:Name="Container">
             <Grid.RowDefinitions>
@@ -20,6 +56,8 @@
             <local:CollapseItem x:Name="ShelfContainer" x:Uid="Control_ShelfCollapseItem"
                             VerticalAlignment="Top" CornerRadius="10,10,0,0" Background="{ThemeResource CardBackground}"
                             HeaderTapped="CollapseItem_HeaderTapped" Tag="Shelf"
+                            ItemsSource="{x:Bind vm.ShelfCollection}"
+                                ItemTemplate="{StaticResource ShelfItemTemplate}"
                             >
                 <local:CollapseItem.HeaderIcon>
                     <uwp:FeatherIcon Symbol="BookOpen" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
@@ -28,6 +66,8 @@
             <local:CollapseItem x:Name="DiscoveryContainer" x:Uid="Control_DiscoveryCollapseItem"
                             VerticalAlignment="Top" Grid.Row="1" Background="{ThemeResource CardBackground}"
                             HeaderTapped="CollapseItem_HeaderTapped" Tag="Discovery"
+                            ItemsSource="{x:Bind vm.DiscoveryCollection}"
+                            ItemTemplate="{StaticResource DefaultItemTemplate}"
                             >
                 <local:CollapseItem.HeaderIcon>
                     <uwp:FeatherIcon Symbol="Compass" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
@@ -36,6 +76,8 @@
             <local:CollapseItem x:Name="StoreContainer" x:Uid="Control_StoreCollapseItem"
                             VerticalAlignment="Top" Grid.Row="2" Background="{ThemeResource CardBackground}"
                             HeaderTapped="CollapseItem_HeaderTapped" Tag="Store"
+                            ItemsSource="{x:Bind vm.StoreCollection}"
+                            ItemTemplate="{StaticResource DefaultItemTemplate}"
                             >
                 <local:CollapseItem.HeaderIcon>
                     <uwp:FeatherIcon Symbol="LifeBuoy" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
