--- a/Clean-Reader/Controls/Components/NavigateMenu.xaml
+++ b/Clean-Reader/Controls/Components/NavigateMenu.xaml
@@ -18,7 +18,7 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE1F5;" FontSize="{CustomResource SmallFontSize}"
-                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"/>
                     <TextBlock Grid.Column="1" HorizontalAlignment="Left" TextTrimming="CharacterEllipsis"
                                ToolTipService.ToolTip="{x:Bind Name,Mode=OneWay}" Text="{x:Bind Name,Mode=OneWay}"
                                VerticalAlignment="Center" FontFamily="{CustomResource Basic}" FontSize="{CustomResource BasicFontSize}"
@@ -36,7 +36,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE1F5;" FontSize="{CustomResource SmallFontSize}"
-                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"/>
                     <TextBlock Grid.Column="1" HorizontalAlignment="Left" TextTrimming="CharacterEllipsis"
                                ToolTipService.ToolTip="{x:Bind Name,Mode=OneWay}" Text="{x:Bind Name,Mode=OneWay}"
                                VerticalAlignment="Center" FontFamily="{CustomResource Basic}" FontSize="{CustomResource BasicFontSize}"
@@ -57,20 +57,11 @@
                             VerticalAlignment="Top" CornerRadius="10,10,0,0" Background="{ThemeResource CardBackground}"
                             HeaderTapped="CollapseItem_HeaderTapped" Tag="Shelf"
                             ItemsSource="{x:Bind vm.ShelfCollection}"
-                                ItemTemplate="{StaticResource ShelfItemTemplate}"
+                            ItemTemplate="{StaticResource ShelfItemTemplate}"
+                            ItemClick="Collapse_ItemClick"
                             >
                 <local:CollapseItem.HeaderIcon>
                     <uwp:FeatherIcon Symbol="BookOpen" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
-                </local:CollapseItem.HeaderIcon>
-            </local:CollapseItem>
-            <local:CollapseItem x:Name="DiscoveryContainer" x:Uid="Control_DiscoveryCollapseItem"
-                            VerticalAlignment="Top" Grid.Row="1" Background="{ThemeResource CardBackground}"
-                            HeaderTapped="CollapseItem_HeaderTapped" Tag="Discovery"
-                            ItemsSource="{x:Bind vm.DiscoveryCollection}"
-                            ItemTemplate="{StaticResource DefaultItemTemplate}"
-                            >
-                <local:CollapseItem.HeaderIcon>
-                    <uwp:FeatherIcon Symbol="Compass" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
                 </local:CollapseItem.HeaderIcon>
             </local:CollapseItem>
             <local:CollapseItem x:Name="StoreContainer" x:Uid="Control_StoreCollapseItem"
@@ -83,9 +74,19 @@
                     <uwp:FeatherIcon Symbol="LifeBuoy" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
                 </local:CollapseItem.HeaderIcon>
             </local:CollapseItem>
+            <local:CollapseItem x:Name="DiscoveryContainer" x:Uid="Control_DiscoveryCollapseItem"
+                            VerticalAlignment="Top" Grid.Row="1" Background="{ThemeResource CardBackground}"
+                            HeaderTapped="CollapseItem_HeaderTapped" Tag="Discovery"
+                            StatusIconVisibility="Collapsed"
+                            >
+                <local:CollapseItem.HeaderIcon>
+                    <uwp:FeatherIcon Symbol="Compass" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
+                </local:CollapseItem.HeaderIcon>
+            </local:CollapseItem>
             <local:CollapseItem x:Name="SettingContainer" x:Uid="Control_SettingCollapseItem"
                             VerticalAlignment="Top" Grid.Row="3" Background="{ThemeResource CardBackground}"
                             HeaderTapped="CollapseItem_HeaderTapped" Tag="Setting" CornerRadius="0,0,10,10"
+                                StatusIconVisibility="Collapsed"
                             >
                 <local:CollapseItem.HeaderIcon>
                     <uwp:FeatherIcon Symbol="Settings" Foreground="{ThemeResource PrimaryColor}" FontSize="{CustomResource BasicFontSize}"/>
